# RNA-design

./: .gitignore  README.md  design_5_prime.py  design_mrna_stability.py  design_toeholds.py  parallel.sh  predict.sh  pyproject.toml  requirements.in  run.sh  run_5_prime.py  saluki.sh  saluki.txt  setup.py  train_5_prime.py  train_openvaccine.py  train_saluki.py  train_toeholds.py  trials.py
MLCB/: README.md  design_5_prime.py  design_mrna_stability.py  design_toeholds.py  mrl.txt  old_run_5_prime.py  parallel.sh  parse_saluki_tfr.py  plot.py  requirements.txt  run.sh  run_5_prime.py  train_5_prime.py  train_saluki.py  train_toeholds.py  trials.py
MLCB/analysis/: analyze_toeholds.py  mouse_vs_human.py  parse_saluki_tfr.py  plot.py
analysis/: logo.py
design/: base.py  demo.sh  design_bioseq2seq.py  parse_redesign.py  run_attribution.py  sampler_src_conditional.py  sampler_tgt_conditional.py
models/aparent/: train_aparent.py
models/openvaccine/: model.py
models/optimus_5prime/: data.py  model.py  polysome.py  run_5_prime.py  train_5_prime.py
models/saluki/: data.py  model.py
models/toeholds/: data.py  model.py
models/utils/: bytenet.py
ngd/utils/: distribution.py  mcmc.py
prototype/: test_dist.py  test_fisher.py
redesign/: base.py  demo.sh  design_bioseq2seq.py  temp.py
seqopt/: categorical.py  maximizer.py  mcmc.py  ngd.py  oracle.py  oracle_maximizer.py  test_jacobian.py
src/seqopt/: categorical.py  (+6 more)
src/seqopt.egg-info/: SOURCES.txt  top_level.txt
utils/: categorical.py  mcmc.py  ngd.py  onehot.py  oracle_maximizer.py  test_jacobian.py
(+12 files in other folders)
